--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "johnny-five": "^1.3.1",
     "matter-js": "^0.14.2",
     "socket.io": "^2.3.0"
   }
